# greetlib

./: README.md  pyproject.toml
.github/workflows/: publish.yml
consumer/: main.py  requirements.txt
greetlib/: __init__.py  cli.py
