[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greetlib"
version = "0.1.0"
description = "A simple greeting library — demo for GitHub Packages"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["greetlib*"]
