[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greetlib"
version = "0.2.0"
description = "Greet people in style — colors, languages, pirate mode, and more!"
authors = [
    { name = "NullSec8", email = "nullsec8@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
greetlib = "greetlib.cli:main"

[tool.setuptools.packages.find]
include = ["greetlib*"]
